# azlyrics-scraper

./: __main__.py  pyproject.toml
azlyricscraper/: azlyrics.py
cache/artifacts/0a/f3/17/804d9665add54c2b6e62f6db2bdd422269f651766886c7361ba6d131bc/: requests_toolbelt-0.4.0-py2.py3-none-any.whl
cache/artifacts/2a/6d/09/9c86808a5219d6b7f499008d339180fd5dff6e37a60ed21341c28a2032/: Unidecode-1.1.1-py2.py3-none-any.whl
cache/artifacts/3d/8d/3b/9c551dd649855fcaef4b8d22844e5c25255a6696f817807a2e8e271b6f/: stem-1.8.2-py3-none-any.whl
cache/artifacts/51/cf/af/99ed18e6b66e47ad5e1ebac6c8c5b3eb4e864d19b20b3546693cd742c7/: fake_useragent-0.1.14-py3-none-any.whl
cache/artifacts/52/63/43/281d928b9706467c2351a1d99881d3a39e67353462352804cc30d3ef1b/: stem-1.7.1-py3-none-any.whl
cache/artifacts/73/37/23/7960ffe9325c683ae02caa43cd078a8922fe7964bd501ef26a6b92c7c7/: boxsdk-2.5.0-py2.py3-none-any.whl
cache/artifacts/e7/dd/52/b74bf1aa66f54327e66524c9ba79eb8be7ad3efe424123265fee3d133a/: fake_useragent-0.1.11-py3-none-any.whl
