[tool.poetry]
name = "azlyricscraper"
version = "0.1.0"
description = ""
authors = ["Espinoza, William"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests="2.22.0"
beautifulsoup4="4.8.0"
Unidecode="1.1.1"
boxsdk="2.5.0"
stem="1.7.1"
fake-useragent="0.1.11"
six = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
